solve problem of getting overlapping time events to display on separate sides

--- a/calendar.css
+++ b/calendar.css
@@ -1,4 +1,4 @@
-.col-1 {
+#col-1 {
 	float: left;
 	width: 100px;
 	display: inline-block;
@@ -27,7 +27,7 @@
 	font-family: 'lucida grande', tahoma, verdana, arial, sans-serif;
 }
 
-.col-2 {
+#col-2 {
 	float: left;
 	position: relative;
 	top: 15px;
@@ -39,11 +39,7 @@
 }
 
 .event {
-	width: 594px;
-	height: 58px;
-	margin-left: 10px;
-	margin-right: 10px;
-	margin-top: 60px;
+	position: absolute;
 	border: 1px solid grey;
 	border-left: 5px solid #3b5998;
 	background-color: #E8E8E8;
